--- a/.github/workflows/veraPDF_gui.yml
+++ b/.github/workflows/veraPDF_gui.yml
@@ -14,7 +14,7 @@ jobs:
       image: x11vnc/docker-desktop
     strategy:
       matrix:
-        java: ["8", "11", "17"]
+        java: ["8"]
     name: Running on Java ${{ matrix.java }}
 
     steps:
